ws_server/bin/release/build/eyre-3a58baace40cdb6e/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/sfav/Projects/watch_party/ws_server/server/target/x86_64-unknown-linux-gnu/release/build/eyre-3a58baace40cdb6e/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
